[package]
name = "rsa"
version = "0.1.0"
authors = ["Florian Diebold <florian.diebold@freiheit.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.2.6", features = ["serde"] }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.46"
glass_pumpkin = "0.3.3"
